Fyllt ut de tre första rubrikerna i rapporten lite.

--- a/rapport/indaprojekt.tex
+++ b/rapport/indaprojekt.tex
@@ -28,13 +28,27 @@
 \section{Projektplan}
 
 \subsection{Programbeskrivning}
-Programmet skall göra en massa kul.
+Programmet skall underhålla två användare genom att låta dessa kriga mot varandra med var sin virtuell stridsvagn.
 
 \subsection{Användarbeskrivning}
-För pensionärer.
+Vi förutsätter att användarna har ``lagom'' datorvana, det vill säga att de vet hur man startar en dator, kör ett program och interagerar med mus och tangentbord. En ungefärlig åldersskala är 8-60 år.
 
 \subsection{Användarscenarier}
-Man startar programmet för att sedan avsluta det.
+Spelet kräver två användare, nedan kallade * och **.
+
+\subsubsection{Scenario I}
+\begin{enumerate}
+	\item * kör programmet och möts av en meny med valen \emph{New Game} och \emph{Quit}.
+	\item * väljer det första alternativet och ett nytt spel startas.
+	\item En översiktsvy över en tvådimensionell karta presenteras. På kartan är två stridsvagnar och ett antal hinder utplacerade.
+	\item * styr den högra stridsvagnen med piltangenterna och avfyrar skott med högra CTRL-knappen. ** styr den vänstra med tangenterna W, A, S och D och skjuter med vänstra CTRL-knappen.
+	\item * lyckas förstöra **:s stridsvagn tre gånger genom att skjuta på den och vinner spelet.
+	\item en meny med valen \emph{Play Again} och \emph{Quit} visas.
+	\item * väljer det senare alternativet och spelet avslutas.
+\end{enumerate}
+
+\subsubsection{Scenario II}
+TODO
 
 \subsection{Testplan}
 Vi skall testa ett flygplan.
