--- a/rapport/indaprojekt.tex
+++ b/rapport/indaprojekt.tex
@@ -28,7 +28,9 @@
 \section{Projektplan}
 
 \subsection{Programbeskrivning}
-Programmet skall underhålla två användare genom att låta dessa kriga mot varandra med var sin virtuell stridsvagn.
+Programmet skall underhålla två användare genom att låta dessa kriga mot varandra med var sin virtuell stridsvagn. 
+
+\subsection{test}
 
 \subsection{Användarbeskrivning}
 Vi förutsätter att användarna har ``lagom'' datorvana, det vill säga att de vet hur man startar en dator, kör ett program och interagerar med mus och tangentbord. En ungefärlig åldersskala är 8-60 år.
