Poängsystem, ändrat "ball-multiply"-powerup:en lite.

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Testreadme.
+This is an awesome Breakout clone created by two KTH students.
+It's written in Java and uses the 'Slick' game library.
