--- a/rapport/indaprojekt.tex
+++ b/rapport/indaprojekt.tex
@@ -9,15 +9,15 @@
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
-\lhead{Slutprojekt i inda}
+\chead{Slutrapport för Breakout}
 \cfoot{\thepage}
 
 \begin{document}
 
 \thispagestyle{empty}
 \begin{center}
-\huge Slutprojekt i Introduktion till Datalogi
-
+\Huge Slutrapport för Breakout \\
+\Large Introduktion till Datalogi \\
 \normalsize Anders Hagward och Fredrik Hillnertz
 \end{center}
 \newpage
@@ -25,21 +25,31 @@
 \tableofcontents
 \newpage
 
-\section{Projektplan}
+\section{Programbeskrivning}
 
-\subsection{Programbeskrivning}
+\subsection{A}
 Programmet skall underhålla och stjäla tid från användaren. Detta genom att låta denne styra ett racket för att upprepade gånger studsa en boll mot ett antal förstörbara block. Lär även vara gynnsamt för användarens pricksäkerhet och reflexer.
 
-\subsection{Användarbeskrivning}
+\subsection{B}
+Programmet har lyckats uppfylla A, men erbjuder också så kallade "power ups" som ändrar spelupplevelsen under spelets gång. Det kan till exempel röra sig om att bollen åker fortare eller långsammare, dödliga dödskallar som faller från skyn eller liknande.
+
+\section{Användarbeskrivning}
+
+\subsection{A}
 Användaren förutsätts ha ``lagom'' datorvana, det vill säga vetskap om hur man startar en dator, kör ett program och interagerar med mus och tangentbord. En ungefärlig åldersskala är 6-60 år. Användaren bör även ha grundläggande kunskaper i det engelska språket.
 
-\subsection{Användarscenarier}
+\subsection{B}
+Användarbeskrivningen har ej ändrats.
+
+\section{Användarscenarier}
+
+\subsection{A}
 Nedan följer två vanliga scenarier.
 
 \subsubsection{Scenario I}
 \begin{enumerate}
 	\item Användaren startar programmet och möts av en huvudmeny med menyvalen \emph{New game}, \emph{Settings}, \emph{Help} och \emph{Quit}.
-	\item Användaren väljer det första alternativet och en ny vy. Denna består av ett racket längst ned som går att styra med musen, en boll fastsittandes mitt på racketet, en hord av förstörbara block längst upp samt solida väggar och tak.
+	\item Användaren väljer det första alternativet och en ny vy framställs på skärmen. Denna består av ett racket längst ned som går att styra med musen, en boll fastsittandes mitt på racketet, en hord av förstörbara block längst upp samt solida väggar och tak.
 	\item Användaren trycker på vänster musknapp och får bollen att fara iväg uppåt, studsandes mot blocken, väggarna och taket.
 	\item Blocken försvinner successivt i och med att bollen studsar på dem.
 	\item Alla block har slutligen försvunnit och användaren vinner spelet.
@@ -60,14 +70,48 @@ Nedan följer två vanliga scenarier.
 	\item En meny med valen \emph{Play again}, \emph{Settings}, \emph{Help} och \emph{Quit} visas. Användaren väljer det sistnämnda.
 \end{enumerate}
 
-\subsection{Testplan}
+\subsection{B}
+Nedan följer de två scenarierna från A, fast som de slutligen blev.
+
+\subsubsection{Scenario I}
+\begin{enumerate}
+	\item Användaren startar programmet och möts av en huvudmeny med menyvalen \emph{New game}, \emph{Settings}, \emph{Help} och \emph{Quit}.
+	\item Användaren väljer det första alternativet och en ny vy framställs på skärmen. Denna består av ett racket längst ned som går att styra med musen, en boll fastsittandes mitt på racketet samt en hord av förstörbara block längst upp.
+	\item Användaren trycker på vänster musknapp och får bollen att fara iväg uppåt, studsandes mot blocken, väggarna och taket.
+	\item Blocken försvinner successivt i och med att bollen studsar på dem.
+	\item Alla block har slutligen försvunnit och användaren har därmed besegrat den nuvarande 'kartan'.
+	\item En ny karta presenteras (det vill säga, blocken är uppställda i en annan formation än tidigare).
+	\item Användaren väljer att avsluta spelet genom att trycka \texttt{Esc} för att få upp spelmenyn och sedan välja \emph{Quit}.
+\end{enumerate}
+
+\subsubsection{Scenario II}
+\begin{enumerate}
+	\item Användaren startar programmet och möts av samma huvudmeny som i föregående scenario.
+	\item Användaren väljer menyvalet \emph{Help} och får reda på information om hur spelet fungerar.
+	\item Användaren backar tillbaka till huvudmenyn genom att trycka \texttt{Esc}.
+	\item Användaren väljer menyvalet \emph{Settings} och väljer att stänga av ljudet.
+	\item Användaren backar återigen till huvudmenyn på samma vis som tidigare men väljer nu \emph{New game}.
+	\item Samma spelvy som i föregående scenario visas och användaren spelar på samma sätt.
+	\item Användaren är inte så pricksäker och lyckas inte få bollen att studsa på racketet. För varje gång han missar förlorar han ett 'liv'.
+	\item Användaren förlorar tre liv och därmed även spelet.
+	\item En meny med valen \emph{Play again}, \emph{Settings}, \emph{Help} och \emph{Quit} visas. Användaren väljer det sistnämnda.
+\end{enumerate}
+
+\section{Testplan}
+
+\subsection{A}
 Förutom de två scenarierna ovan kommer menyerna testas ordentligt, så alla menyval fungerar korrekt. Inställningsmöjligheterna kommer testas, så att ljudeffekterna verkligen försvinner när man gör den inställningen, och verkligen kommer tillbaka om man gör inställningen igen.
 
 Själva spelmekaniken kommer givetvis testas grundligt så att inte bollen verkligen studsar mot väggarna, taken, blocken och racketet, så att blocken försvinner vid kontakt med bollen, så att ett 'liv' försvinner och att bollen återställs på racketet vid varje 'miss'. Vidare skall testas så att rätt meny med fungerande menyval dyker upp vid förlorat spel, så att en ny bana laddas när alla block är borta, så att en poänglista visas när man klarat alla fem banor och att den nya poängen sparas.
 
 Självklart skall spelet testas av en tredjepart.
 
-\subsection{Programdesign}
+\subsection{B}
+HÄR SKALL TESTRESULTAT HAMNA SAMT EN ANALYS AV DESSA!!!!!
+
+\section{Programdesign}
+
+\subsection{A}
 Programmet kommer bygga på spelbiblioteket \emph{Slick}. Nedan följer en lista på de grundläggande klasserna och dess viktigaste metoder.
 
 \begin{itemize}
@@ -79,16 +123,42 @@ Programmet kommer bygga på spelbiblioteket \emph{Slick}. Nedan följer en lista
 	\item \texttt{BreakoutGame}: 'Huvudklassen' som innehåller \texttt{main}-metoden.
 \end{itemize}
 
-\subsection{Tekniska frågor}
+\subsection{B}
+Vi höll oss till biblioteket Slick, men klasstrukturen ändrades en del i förhållande till den i A:
+
+\begin{itemize}
+	\item \texttt{MainMenuState, GameplayState}: Se A.
+	\item \texttt{LevelHandler}: Har hand om allt som rör kartorna; ladda in en karta från en fil och hålla koll på alla objekt på den (som bollar, block och så vidare).
+	\item \texttt{Ball, Block, Racket, PowerUp}: Klasser som representerar synliga spelobjekt. Alla dessa ärver Slick-klassen \texttt{Shape} på ett eller annat sätt, samt implementerar gränssnittet \texttt{Movable} för att kunna röra på sig. Förutom de positionsrelaterade metoderna ärvda från \texttt{Shape} har de den viktiga metoden \texttt{draw}, som ritar ut objektet på rätt plats på skärmen.
+	\item \texttt{Movable}: Ett interface med metoden \texttt{move}, där implementerande klasser får beskriva hur objektets position skall uppdateras.
+	\item \texttt{HighscoreHandler, Score}: Den förstnämnda har hand om själva highscorelistan, och att läsa och skriva den till en fil. Varje poäng representeras av ett \texttt{Score}-objekt, som innehåller poängen samt namnet på spelaren som uppnått dem.
+	\item \texttt{Player}: Representerar spelaren med ett namn, hur många liv spelaren har kvar samt dennes poäng.
+	\item \texttt{BreakoutGame}: 'Huvudklassen' som innehåller \texttt{main}-metoden.
+\end{itemize}
+
+\section{Tekniska frågor}
+
+\subsection{A}
 Nedan följer en lista med tänkbara tekniska problem och eventuella lösningar.
 \begin{description}
-	\item[Problem:] Vid eventuellt bildbyte på objekt medan spelet körs (till exempel om ett block kräver flera bollstudsar för att försvinna) skulle en viss fördröjning kunna uppstå innan programmet har läst in den nya bilden. \textbf{Lösning:} Ladda in flera bilder för ett objekt vid initiering?
-	\item[Problem:] Hur 'kartorna' skall representeras. \textbf{Lösning:} Läsa in dem från filer?
-	\item[Problem:] Exakt vilka klasser som skall finnas och vad var och en skall sköta i spelet, samt undvika att skapa klasser det redan finns motsvarigheter till i spelbiblioteket. \textbf{Lösning:} Träna objektorientering, tänka efter ordentligt och läsa bibliotekets dokumentation.
-	\item[Problem:] Hur skall programmet bete sig om någon väsentlig fil saknas? \textbf{Lösning:} Ljudfil - meddela användaren, highscorefil - skapa en ny fil utan att meddela användaren, kartfil eller bildfil - meddela användaren och avsluta.
+	\item[Problem:] Vid eventuellt bildbyte på objekt medan spelet körs (till exempel om ett block kräver flera bollstudsar för att försvinna) skulle en viss fördröjning kunna uppstå innan programmet har läst in den nya bilden. \textbf{Ev. lösning:} Ladda in flera bilder för ett objekt vid initiering?
+	\item[Problem:] Hur 'kartorna' skall representeras. \textbf{Ev. lösning:} Läsa in dem från filer?
+	\item[Problem:] Exakt vilka klasser som skall finnas och vad var och en skall sköta i spelet, samt undvika att skapa klasser det redan finns motsvarigheter till i spelbiblioteket. \textbf{Ev. lösning:} Träna objektorientering, tänka efter ordentligt och läsa bibliotekets dokumentation.
+	\item[Problem:] Hur skall programmet bete sig om någon väsentlig fil saknas? \textbf{Ev. lösning:} Ljudfil - meddela användaren, highscorefil - skapa en ny fil utan att meddela användaren, kartfil eller bildfil - meddela användaren och avsluta.
 \end{description}
 
-\subsection{Arbetsplan}
+\subsection{B}
+\begin{description}
+	\item[Problem:] Vid eventuellt bildbyte på objekt medan spelet körs (till exempel om ett block kräver flera bollstudsar för att försvinna) skulle en viss fördröjning kunna uppstå innan programmet har läst in den nya bilden. \textbf{Löstes så här:} Ingen synlig fördröjning noterades (förmodligen för att bilderna är såpass små) så detta var inget problem.
+	\item[Problem:] Hur 'kartorna' skall representeras. \textbf{Löstes så här:} Kartorna skapades med hjälp av programmet \emph{Tiled Map Editor} (http://www.mapeditor.org/), och informationen om dem sparades i XML-format. För att ladda en bana läses bara dess respektive XML-fil in och \texttt{Block}-objekt skapas efter informationen i filen.
+	\item[Problem:] Exakt vilka klasser som skall finnas och vad var och en skall sköta i spelet, samt undvika att skapa klasser det redan finns motsvarigheter till i spelbiblioteket. \textbf{Löstes så här:} Själva konceptet 'objektorientering' har vi fått träna på allteftersom arbetet fortskridit för att inte koden skall bli alltför gräslig. Slicks dokumentation har studerats mer eller mindre som planerat.
+	\item[Problem:] Hur skall programmet bete sig om någon väsentlig fil saknas? \textbf{Löstes så här:} Ljudfil - meddela användaren, highscorefil - skapa en ny fil utan att meddela användaren, kartfil eller bildfil - meddela användaren och avsluta.
+	\item[Problem:] Hur skall vi få spelet att köras lika snabbt på olika kraftfulla datorer? \textbf{Löstes så här:} Använde metoderna \texttt{setMinimumLogicUpdateInterval} och \texttt{setMaximumLogicUpdateInterval} från Slick-klassen \texttt{GameContainer} för att precisera uppdateringsintervallet.
+\end{description}
+
+\section{Arbetsplan}
+
+\subsection{A}
 Arbetet kommer delas upp på det viset att var och en får några bestämda klasser att implementera. De skall implementeras efter en specifikation som bestäms i förväg så att båda har koll på vad de gör och vad de skall användas till. Om eventuella problem skulle uppstå och en fastnar med någon del av implementationen kan givetvis den andre hjälpa till.
 
 Arbetsplanen är upplagd på följande vis:
@@ -99,5 +169,11 @@ Arbetsplanen är upplagd på följande vis:
 	\item[23 - 30 april:] Slutrapporten skall skrivas och eventuell putsning av spelet skall göras inför prototypvisning.
 	\item[1 - 7 maj:] Eventuell implementation av detaljer som inte hunnits med samt finputsning.
 \end{description}
+
+\subsection{B}
+Vi låg i fas med den förbestämda arbetsplanen i princip genom hela arbetet. Uppdelningen skedde spontant allt eftersom vad vi kände för att göra och vad som behövde göras. I stora drag hade Anders hand om menyerna, kollisionshanteringen och poängsystemet, medan Fredrik fixade 'powerups':en och kartorna.
+
+\section{Sammanfattning}
+VAD HAR VI LÄRT OSS AV PROJEKTET?
 
 \end{document}
